after final mergin - correction mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -247,7 +247,7 @@ a.nav-link {
 
         img{
             width: 25px;
-            margin-top: -50px;
+            margin-top: -100px;
             filter: saturate(4);
         }
 
@@ -256,6 +256,7 @@ a.nav-link {
 
             h3{
                 @extend .h3;
+                margin-bottom: 20px;
             }
 
             p{
@@ -263,6 +264,7 @@ a.nav-link {
                 line-height: 1.5em;
                 color: $greyColor3;
                 letter-spacing: 0.05em;
+                margin-bottom: 40px;
             }
         }
     }
@@ -295,6 +297,7 @@ a.nav-link {
 
         p{
             color: $greyColor1;
+            margin-bottom: 30px;
         }
     
         .p_design{
@@ -305,6 +308,7 @@ a.nav-link {
         h2{
             @extend .h2;
             padding-right: 20px;
+            margin-bottom: 30px;
         }
     
         .p_weDesigned{
@@ -349,13 +353,13 @@ a.nav-link {
                 @extend .paragraphe_design;
                 padding-left: 0;
                 color: $blueColor;
-                margin-bottom: 5px;
+                margin-bottom: 30px;
             }
         
             h2{
                 @extend .h2;
                 color: $greyColor4;
-                margin-bottom: 5px;
+                margin-bottom: 30px;
                 padding-right: 20px;
             }
         
@@ -391,6 +395,8 @@ a.nav-link {
         
                 h3{
                     @extend .h3;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
                 }
         
                 p{
@@ -398,6 +404,7 @@ a.nav-link {
                     padding-left: 40px;
                     padding-right: 40px;
                     color: $greyColor3;
+                    margin-bottom: 20px
                 }
         
                 .p_special{
@@ -414,6 +421,7 @@ a.nav-link {
         margin-bottom: 30px;
         display: flex;
         justify-content: center;
+
         img{
             width: 338px;
             border-radius: 15px;
@@ -439,11 +447,13 @@ a.nav-link {
                 @extend .paragraphe_design;
                 padding-right: 0;
                 color: $blueColor;
+                margin-bottom: 30px;
             }
         
             h2{
                 @extend .h2;
                 color: $greyColor4;
+                margin-bottom: 30px;
             }
         
             .p_weDesigned{
@@ -457,7 +467,7 @@ a.nav-link {
             .d_story{
                 background-color: $whiteColor;
                 border-radius: 5px;
-                margin-bottom: 20px;
+                margin-bottom: 40px;
                 padding-top: 30px;
                 padding-left: 40px;
                 padding-right: 40px;
@@ -476,7 +486,7 @@ a.nav-link {
                     }
     
                     div{
-                        margin-bottom: 15px;
+                        margin-bottom: 50px;
                         margin-top: 20px;
     
                         h4{
